# android-nanovg-sample

./: .gitignore  README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/ru/egslava/hello_nanovg/: JNI.java  MainActivity.java
app/src/main/java/ru/egslava/hello_nanovg/triangle/: ConfigChooser.java  ContextFactory.java  TriangleView.java
app/src/main/jni/: CMakeLists.txt  gl_code.cpp
app/src/main/res/anim/: in_alpha_2500.xml  in_alpha_5000.xml  in_from_bottom.xml  in_from_left.xml  out_to_left.xml  out_to_right.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
